--- a/dyn/rep.html
+++ b/dyn/rep.html
@@ -527,7 +527,7 @@
           $O$ of a point mass at $P$.</p>
           <div class="envBody">
             <p>
-              \[\vec{H}_O = \vec{r}_{OP} \times \vec{p}_P
+              \[\vec{L}_O = \vec{r}_{OP} \times \vec{p}_P
               = \vec{r}_{OP} \times m\vec{v}_P\]
             </p>
           </div>
@@ -553,25 +553,25 @@
           $O$.</p>
           <div class="envBody">
             <p>
-              \[\vec{M}_O = \dot{\vec{H}}_O\]
+              \[\vec{M}_O = \dot{\vec{L}}_O\]
             </p>
           </div>
         </div>
         <div class="envContainer derivation">
           <div class="envBody">
             <p>
-              If we compute the derivative of $\vec{H}_O$ and use
+              If we compute the derivative of $\vec{L}_O$ and use
               Newton's equations <a href="#rep-en">#rep-en</a>, then
               we obtain:
 
               \[\begin{aligned}
-              \dot{\vec{H}}_O &amp;= \frac{d}{dt} \Big(
+              \dot{\vec{L}}_O &amp;= \frac{d}{dt} \Big(
               \vec{r}_{OP} \times m \vec{v}_P \Big) \\
               &amp;= \dot{\vec{r}}_{OP} \times m \vec{v}_P
               + \vec{r}_{OP} \times m \dot{\vec{v}}_P \\
               &amp;= m \vec{v}_P \times \vec{v}_P
               + \vec{r}_{OP} \times m \vec{a}_P \\
-              &amp;= 0 + \vec{r}_{OP} \times \vec{F} \\
+              &amp;= 0 + \vec{r}_{OP} \times \vec{F}_P \\
               &amp;= \vec{M}_O.
               \end{aligned}\]
 
@@ -588,12 +588,12 @@
           <div class="envBody">
             <p>
               In the moment equation <a href="#rep-et">#rep-et</a> it
-              is crucial that $\vec{M}_O$ and $\vec{H}_O$ are both
+              is crucial that $\vec{M}_O$ and $\vec{L}_O$ are both
               computed about the same base point $O$. If we have
-              $\vec{M}_O$ about $O$ and $\vec{H}_C$ about $C$, then it
+              $\vec{M}_O$ about $O$ and $\vec{L}_C$ about $C$, then it
               is <i>not true</i> that $\vec{M}_O =
-              \dot{\vec{H}}_C$. For this reason we always write the
-              base point $O$ as a subscript on $M$ and $H$, otherwise
+              \dot{\vec{L}}_C$. For this reason we always write the
+              base point $O$ as a subscript on $M$ and $L$, otherwise
               it's easy to forget which point we've used as the base
               point.
             </p>
