--- a/dyn/reg.html
+++ b/dyn/reg.html
@@ -150,11 +150,12 @@
           Angular momentum
         </h2>
         <div class="envContainer equation" id="reg-ea">
-          <p class="envHeader">Angular momentum of a rigid body rotating about a principal axis $\hat{a}$ through point $P$.</p>
+          <p class="envHeader">Angular momentum of a rigid body rotating about a principal axis $\hat{a}$ through point $O$.</p>
           <div class="envBody">
             <p>
-              \[\vec{H}_P = I_{P,\hat{a}} \vec\omega \]
+              \[\vec{L}_O = I_{O,\hat{a}} \vec\omega \]
             </p>
+            <p>i.e the rigid body is rotating about point $O$ (or point $O$ is fixed).</p>
           </div>
         </div>
         <div class="envContainer equation" id="reg-er">
@@ -162,8 +163,8 @@
           <div class="envBody">
             <p>
               \[\begin{aligned}
-              \sum_i \vec{M}_{C,i} &amp;= \dot{\vec{H}}_C \\
-              \text{or } \sum_i \vec{M}_{O,i} &amp;= \dot{\vec{H}}_O \qquad \text{if $O$ is a fixed point}
+              \sum_i \vec{M}_{C,i} &amp;= \dot{\vec{L}}_C \\
+              \text{or } \sum_i \vec{M}_{O,i} &amp;= \dot{\vec{L}}_O \qquad \text{if $O$ is a fixed point}
               \end{aligned}\]
             </p>
           </div>
